# nodus

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RESTRUCTURE.md  STRUCTURE.md  config.nodus  nodus.config.json  pyproject.toml  schema.nodus  workflow.template.nodus
.agents/: rules
.agents/skills/: nodus
.agents/skills/doc-maintenance/: SKILL.md
.agents/skills/doc-maintenance/references/: audit-checklist.md  section-map.md
.agents/skills/mcp-builder/reference/: evaluation.md
.agents/skills/mcp-builder/scripts/: connections.py  evaluation.py
.agents/skills/nodus/: SKILL.md
.agents/skills/nodus-dev-init/: SKILL.md
.agents/skills/nodus-dev-init/scripts/: setup_unix.sh  setup_windows.ps1
.agents/skills/rust-semver/scripts/: check.py
.agents/skills/skill-creator/scripts/: quick_validate.py
.agents/workflows/: nodus.compile.md  nodus.create.md  nodus.dev.init.md  nodus.explain.md  nodus.init.md  nodus.pack.md  nodus.run.md  nodus.test.md  nodus.validate.md
.claude/: settings.local.json  workflows
.claude/commands/: nodus.dev.init.md
.claude/skills/nodus/references/: workflow_patterns.md
.claude/workflows/: nodus.compile
.design/: INDEX.md  RULES.md  workspace.json
.design/main/: INDEX.md
.design/main/specifications/: l1-nodus-architecture.md  l1-testing-strategy.md  l2-nodus-agents.md  l2-nodus-extensions.md  l2-nodus-runtime.md  l2-nodus-spec.md
.magic.nodus/templates/: spec.md
context/: tone_guidelines.md
core/: AGENTS.md  schema.errors.nodus  schema.nodus  schema.types.nodus
demo/: config.nodus
demo/.nodus/: config.json  core
demo/.nodus/context/: approved_phrases.json  blocked_phrases.json  escalation_contacts.json  tone_guidelines.md
demo/.nodus/core/: AGENTS.md  cli.nodus  schema.errors.nodus  schema.lint.nodus  schema.nodus  schema.types.nodus
demo/.nodus/schema/: brand_voice.nodus  channels.nodus  schema.nodus  validators.nodus
demo/context/: brand_voice.md
demo/workflows.nodus/: beautiful_mention.nodus
demo/workflows.nodus/ecommerce/: order_confirm.nodus
demo/workflows.nodus/support/: ticket_triage.nodus
demo/workflows/ecommerce/: order_confirm.nodus
demo/workflows/social/: crisis_response.nodus  morning_digest.nodus
demo/workflows/support/: ticket_triage.nodus
docs/: README.md  cli.md  protocol.md  schema.md  syntax.md
examples/social/: beautiful_mention.nodus
examples/support/: ticket_triage.nodus
extensions/jetbrains/: README.md
installer/: README.md
lang/core/: grammar.peg
lang/templates/: workflow.template.nodus
packs/nodus-social/: pack.json
runtime/: constants.py  settings.py
runtime/cli/: nodus.py
runtime/interpreter/: __init__.py  ast_nodes.py  executor.py  lexer.py  parser.py  transpiler.py  validator.py
sandbox/: port_suite.py
sandbox/.magic/: analyze.md  rule.md  run.md  spec.md  task.md
sandbox/.magic.nodus/templates/: tasks.md
sandbox/.magic.nodus/workflows/sdd/: init.nodus  retro.nodus
sandbox/.magic/scripts/: executor.js  init.js
sandbox/.magic/templates/: retrospective.md
sandbox/.magic/tests/: suite.md
sandbox/after/: GAPS.md  nodus.config.json
sandbox/after/.nodus/core/: schema.types.nodus
sandbox/after/.nodus/schema/: sdd.schema.nodus
sandbox/after/.nodus/tests/: suite.md
sandbox/after/schema/: sdd.schema.nodus
sandbox/after/templates/: retro.md
sandbox/after/workflows/sdd/: analyze.nodus  init.nodus  retro.nodus  rule.nodus  run.nodus  simulate.nodus  spec.nodus  task.nodus
sandbox/before/scripts/: check-prerequisites.js  generate-checksums.js  init.js
sandbox/before/templates/: plan.md  tasks.md
sandbox/my-project/.agents/: rules  workflows
sandbox/my-project/.agents/skills/: nodus
sandbox/my-project/.agents/workflows/: nodus.compile.md  nodus.create.md
sandbox/my-project/.magic/: .checksums  analyze.md  init.md  retrospective.md  simulate.md
sandbox/my-project/.magic-nodus/: config.nodus
sandbox/my-project/.magic-nodus/templates/: plan.md
sandbox/my-project/.magic-nodus/workflows/sdd/: analyze.nodus  rule.nodus  run.nodus  simulate.nodus  spec.nodus  task.nodus
sandbox/my-project/.magic/scripts/: generate-context.js
sandbox/my-project/.magic/templates/: micro-spec.md  spec.md
sandbox/my-project/.magic/tests/: suite.md
templates/: schema.template.nodus  workflow.template.nodus
tests/: __init__.py
tests/installer/: __init__.py
tests/runtime/: __init__.py  test_executor.py  test_lexer.py  test_parser.py  test_transpiler.py  test_validator.py
workflows/: beautiful_mention.nodus
