[project]
name = "nodus"
version = "0.4.1"
description = "NODUS — Node Orchestration DSL for Unified Systems"
authors = [{ name = "Oleg Alexandrov", email = "alexandrovoleg.ru@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[project.urls]
homepage = "https://teratron.github.io/nodus"
repository = "https://github.com/teratron/nodus"

[project.scripts]
nodus = "runtime.cli.nodus:main"

[dependency-groups]
dev = [
    "pyrefly>=0.57.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.uv]
package = true
link-mode = "copy"

[tool.ruff]
fix = true
target-version = "py312"
src = [
    "packages/runtime",
    "tests",
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "N",      # flake8-noqa
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF002", # Ambiguous characters in docstrings
]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
known-first-party = ["nodus", "packages"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyrefly]
project-includes = [
    "packages/runtime",
    "tests",
]

[tool.pytest.ini_options]
python_classes = [
    "Test",
    "Describe",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/runtime"]
